[package]
name = "pubsub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
byteorder = "1.4.3"
clap = { version = "4.0.29", features = ["derive"] }
crossbeam = "0.8.2"
ctrlc = "3.2.4"
env_logger = "0.10.0"
log = "0.4.17"
strum_macros = "0.24.3"
thiserror = "1.0.38"
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
